<resources>
    <string name="app_name">МФЦ 56</string>

    <string name="title_activity_login">Авторизация</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_pre_record">Предварительная запись</string>
    <string name="menu_check_status">Проверка статуса заявления</string>
    <string name="menu_workload">Загруженность офисов</string>
    <string name="menu_info">Справочная информация</string>
    <string name="menu_settings">Настройки</string>

    <string name="btn_logout">Выйти</string>
    <string name="btn_google">Войти через Google</string>
    <string name="btn_facebook">Войти через Facebook</string>
    <string name="btn_save">Сохранить</string>
    <string name="btn_check">Проверить статус заявления</string>
    <string name="btn_register">Записаться</string>

    <string name="hint_fio">ФИО</string>
    <string name="hint_snils">СНИЛС</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_phone">Телефон</string>
    <string name="hint_deal_number">Номер дела (последние 8 цифр)</string>
    <string name="hint_pin_code">Пин-код</string>

    <string name="text_onboarding_title">МФЦ 56</string>
    <string name="text_onboarding">Приложение для работы с МФЦ Оренбургской области</string>

    <string name="progress_loading">Загрузка…</string>

    <string name="snackbar_action_hide">Скрыть</string>

    <string name="title_status">Статус заявления</string>
    <string name="title_oktmo">Справочник ОКТМО</string>
    <string name="title_units_oktmo">Подразделения по ОКТМО</string>
    <string name="title_services">Список услуг</string>
    <string name="title_booking_dates">Тайм-слоты</string>
    <string name="title_ticket_done">Талон зарегистрирован</string>
    <string name="title_register_ticket">Регистрация талона</string>

    <string name="key_push">push</string>
    <string name="title_push">Push-уведомления</string>

    <string name="msg_token_fmt">FCM Token: %s</string>

    <string name="facebook_application_id" translatable="false">379706986676721</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb379706986676721</string>
    <string name="google_client_id" translatable="false">472028514972-42lt1lfs1u9mcl6fp0d94imbc0pfo25a.apps.googleusercontent.com</string>

</resources>